--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap" rel="stylesheet">
     <title>Paranoia</title>
 </head>
 <body>
@@ -24,15 +24,17 @@
                 </p>
             </div>
         </div>
-        <!-- <button id="continue-btn" onClick="buttonClick()">
+
+        <div class="rules-and-button__container">
+            <div class="rules__container">
+                <p class="rules__text">
+                    Press the button for a question
+                </p>
+            </div>
+        <button id="continue-btn" onClick="buttonClick()">
             Click
-        </button> -->
-        <div class="rules__container">
-            <p class="rules__text">
-
-            </p>
+        </button>
         </div>
-
     </div>
 
     <script src="index.js"></script>
